--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
     "titleBar.inactiveBackground": "#007fff99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#007fff"
+  "peacock.color": "#007fff",
+  "liveSassCompile.settings.generateMap": false,
+  "liveSassCompile.settings.showOutputWindowOn": "Error"
 }
